# rust-megadrive-cart-info

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
misc/: shiftjis-utf8.ods  string_to_utf8_bytes.rs
rpm/: _service  megadrive-cart-info.spec
src/: lib.rs  main.rs  megadrive.rs  shift_jis.rs
