[package]
name = "megadrive-cart-info"
version = "0.1.0"
authors = ["Ben Sampson <github.com/billyrayvalentine"]
edition = "2018"
description = "Simple tool to inspect Megadrive / Genesis ROM images from the commandline"
homepage = "https://github.com/billyrayvalentine/rust-megadrive-cart-info"
license = "MIT"

[dependencies]
